<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/normalBgColor">

    <ImageView
        android:id="@+id/optionsImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:layout_gravity="end"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/menu"

        android:background="?attr/selectableItemBackgroundBorderless" />

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_apps"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:padding="24dp"

        android:textColor="@color/normalTextColor"
        android:textColorHint="@color/normalTextColorMiddle"
        android:importantForAutofill="no"
        android:inputType="text"

        android:backgroundTint="@color/normalTextColorSmall" />

    <TextView
        android:id="@+id/msgTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/normalTextColorMiddle"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"

        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay" />

</LinearLayout>