<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_label">TypeUp</string>
    <string name="app_launcher_activity">com.typeup.search_apps.SearchActivity</string>
    <string name="app_name_long">TypeUp - Search installed apps</string>

    <string name="search_apps">Search apps…</string>
    <string name="accept">Accept</string>
    <string name="menu">menu</string>
    <string name="ok">OK</string>

    <string name="unableToOpen">Unable to open selected app</string>
    <string name="noResultsTxt">No results found.</string>

    <string name="numPickerTxt">Change max number of displayed apps</string>
    <string name="saveTxt">Save</string>
    <string name="cancelTxt">Cancel</string>
    <string name="menuOptionsTitle">Options</string>
    <string name="menuMoreOptionsTitle">More options</string>
    <string name="chooseThemeTitle">Choose theme</string>

    <string name="featureFeedbackUrl" tools:ignore="Typos">https://docs.google.com/forms/d/e/1FAIpQLSdL6XDyBNedZhVXMOUzTHdFG0qHTrzoJIYbsB6XLWDMPmWp1A/viewform</string>

    <string name="privacyLongTxt">This app does not collect any information about you.
        \n\n<a href="https://github.com/marko-mihajlovic/TypeUp/wiki/Privacy-Policy"><i>View full Privacy Policy</i></a>
    </string>


</resources>